0.27
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Move bugtracker to github.
 - Update author name.
 - Update Module::Install to 1.19 version.

0.26 2017-11-24T11:30:49+01:00
 - In 0.01 version was Error::Pure::AnsiColor::PrintVar with 0.25 version.
   Then grow version to bigger.

0.03 2017-11-24T11:01:46+01:00
 - Fix signature.

0.02 2017-04-02T19:15:58+02:00
 - Fix #120864 - Makefile.PL fails with no '.' in @INC.

0.01 2017-03-08T15:38:59+01:00
 - First version.