@@ -139,7 +139,7 @@ Install the Error::Pure modules.
 
 =head1 REPOSITORY
 
-L<https://github.com/tupinek/Error-Pure-ANSIColor>
+L<https://github.com/michal-josef-spacek/Error-Pure-ANSIColor>
 
 =head1 AUTHOR
 
