@@ -30,8 +30,8 @@ requires:
   Readonly: 0
   perl: 5.6.2
 resources:
-  bugtracker: https://github.com/tupinek/Error-Pure-ANSIColor/issues
-  homepage: https://github.com/tupinek/Error-Pure-ANSIColor
+  bugtracker: https://github.com/michal-josef-spacek/Error-Pure-ANSIColor/issues
+  homepage: https://github.com/michal-josef-spacek/Error-Pure-ANSIColor
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/Error-Pure-ANSIColor
+  repository: git://github.com/michal-josef-spacek/Error-Pure-ANSIColor
 version: '0.27'
