@@ -21,9 +21,9 @@ requires 'Exporter' => 0;
 requires 'List::MoreUtils' => 0;
 requires 'Readonly' => 0;
 requires 'perl' => '5.6.2';
-resources 'bugtracker' => 'https://github.com/tupinek/Error-Pure-ANSIColor/issues';
-resources 'homepage' => 'https://github.com/tupinek/Error-Pure-ANSIColor';
-resources 'repository' => 'git://github.com/tupinek/Error-Pure-ANSIColor';
+resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Error-Pure-ANSIColor/issues';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Error-Pure-ANSIColor';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Error-Pure-ANSIColor';
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
 tests_recursive;
