@@ -30,7 +30,7 @@ SEE ALSO
         Install the Error::Pure modules.
 
 REPOSITORY
-    <https://github.com/tupinek/Error-Pure-ANSIColor>
+    <https://github.com/michal-josef-spacek/Error-Pure-ANSIColor>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
